# pdf-renderer

./: .gitignore  README.md  helpers.py  main.py  pyproject.toml  setup.cfg
html/: small_table.html
poc/: main.py  main_2.py
static/css/basic/: styles.css
templates/basic/: table.jinja2  table_body.jinja2
